--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         .save-btn {
             margin-top: 30px;
             padding: 10px 25px;
-            background-color: #2c3e50;
+            background-color: #1D5556;
             color: white;
             border: none;
             border-radius: 5px;
