--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </div>
     </div>
     
-    <button class="save-btn" onclick="saveData()">dit janze Speichern</button>
+    <button class="save-btn" onclick="saveData()">dit janze speichern</button>
     
     <script>
         // Array to store counter values and names
